# clyjin_templates

./: .gitignore  CHANGELOG.md  Makefile  README.md  conftest.py  pyproject.toml  ruff.toml
clyjin_templates/: __init__.py  add_module.py  args.py  boot.py  conversion.py  modules.py  parsers.py  plugin.py  root_module.py  rootmodule.py  test_conversion.py  testing.py
clyjin_templates/filemaker/: maker.py
clyjin_templates/filesystem/: __init__.py  maker.py  models.py  nodeconverter.py  test_nodeconverter.py  test_utils.py  testing.py  utils.py
clyjin_templates/filetree/: internalnodeconverter.py  node.py  nodeconverter.py  test_nodeconverter.py  testing.py  types.py
clyjin_templates/template/: errors.py  group.py  group_service.py  refname.py  source.py  specparser.py  template.py  templategroup.py  testing.py  vars.py
clyjin_templates/template/filemaker/: maker.py
clyjin_templates/template/filetree/: node.py  nodecontent.py  nodefieldkey.py  nodetype.py
clyjin_templates/template/vars/: scope.py  var.py  vars.py
clyjin_templates/utils/: klass.py  never.py  service.py  servicehub.py  singleton.py  test_textvars.py  textvars.py  yml.py
tests/: test.py.mako
tests/templategroups/s1/: index.md  s1_1.py.mako  s1_2.py.mako  spec.yml
tests/templategroups/s2/: ecs-component.cs.mako  ecs-system.cs.mako  spec.yml
