[tool.poetry]
name = "clyjin-templates"
version = "0.1.0"
description = "Creates files and directories using templates"
authors = ["ryzhovalex <thed4rkof@gmail.com>"]
readme = "README.md"
packages = [{include = "clyjin_templates"}]
include = [
    "**/.version"
]

[tool.poetry.dependencies]
python = "^3.11"
clyjin = "^0.2.4"
mako = "^1.2.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.284"
coverage = "^7.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
